Add-social-arrow

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -35,4 +35,8 @@ $black-200: rgba(93, 72, 72, 0.166);
 $black-100: #f7f7f7;
 $black-alpha-100: rgba(0, 0, 0, 0.5);
 
-
+//Social-icons
+$linkedin: #0a66c2;
+$github: #171515;
+$instagram:radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+$whatsapp: rgb(4, 239, 4);
