--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,5 +1,5 @@
 
-// --------------- Colors ---------------
+//! --------------- Colors ---------------
 
 // Background Colors
 $bg-light: #232323;
@@ -9,8 +9,10 @@ $abt-bg:black;
 $skill-bg: #262835;
 $proj-bg:#1C1D24;
 $contact-bg:#131416;
+$navbar-bg: #1c1d2434;
+$stk-nav-bg: #1c1d24;;
+$navbar-border:#513030;
 
-// #1C1D24
 
 //text Colors
 $accent-color:#d88135;
@@ -19,7 +21,7 @@ $main1: #404bc7;
 $grad-main:linear-gradient(to left, orange, tomato);
 
 //Shadows
-$box-shadow-low: 0 5px 15px rgba(0, 0, 0, 0.2);
+$box-shadow-low: 0 5px 15px rgba(0, 0, 0, 0.3);
 $box-shadow-high: 0 10px 10px rgba(111, 108, 108, 0.5);
 
 
@@ -40,3 +42,17 @@ $linkedin: #0a66c2;
 $github: #171515;
 $instagram:radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
 $whatsapp: rgb(4, 239, 4);
+
+
+
+//! --------------- Measurements ---------------
+
+
+//Border Radius
+$br-5:5px;
+$br-10:10px;
+$br-15:15px;
+$br-20:20px;
+$br-25:25px;
+$br-30:30px;
+
