--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,14 +1,17 @@
 @import "../../variables";
 
-
 .navbar {
     position: fixed;
+    top: 10px;
+    left: 50%;
+    transform: translate(-50%);
     z-index: 999;
-    width: 100%;
-    padding: 15px 25px;
-    transition: all 1s ease;
+    width: 98%;
+    padding: 10px 25px;
+    border-radius: $br-15;
+    transition: all 0.5s ease;
     margin: 0 auto;
-    background-color: blue;
+    background: $navbar-bg;
 
     .logo {
         display: flex;
@@ -19,16 +22,15 @@
             font-family: "Times New Roman", Times, serif;
         }
     }
+
     ul {
         display: flex;
-        // margin-top: 10px;
-        // margin-bottom: 10px;
         column-gap: 10px;
         z-index: 34;
         transition: all 1s ease;
 
         li {
-            background-color: pink;
+            // background-color: pink;
             font-size: 15px;
             font-weight: 900;
             padding: 8px 16px;
@@ -39,41 +41,38 @@
             color: rgba(255, 255, 255, 0.823);
 
             .nav_item {
-                background-color: rgb(24, 234, 66);
+                // background-color: rgb(24, 234, 66);
+            }
+            .active_Sec {
+                color: $accent-color;
             }
         }
     }
 }
 
 .sticky {
-    padding: 1px 25px;
-    border-radius: 10px;
-    // background: rgb(55, 47, 208);
-    background: linear-gradient(90deg, rgb(32, 192, 138) 0%, rgb(40, 154, 137) 17%, rgb(40, 140, 160) 100%);
-    box-shadow: var(--shadow-black-100);
-    opacity: 1;
+    padding: 5px 15px;
+    // border-radius: 10px;
+    background: $stk-nav-bg;
 
-    /* left: 50%;
-    transform: translateX(-50%); */
+    box-shadow: $box-shadow-low;
+    border-bottom: 1px solid $accent-color;
+    opacity: 1;
 }
 
 .navbar .menu_btn {
     /* height: 30px; */
     /* width: 35px; */
-    background-color: red;
+    background-color: $accent-color;
     box-shadow: $box-shadow-low;
     padding: 6px;
     border-radius: 5px;
-    /* line-height: 34px; */
     text-align: center;
-    /* color: var(--white); */
     font-size: 17px;
     top: 0;
     display: none;
     cursor: pointer;
 }
-
-
 
 /*TODO  re85  */
 
@@ -81,11 +80,31 @@
     .navbar {
         // background-color: red;
         padding: 12px 17px;
-    }
 
-    // .sticky {
-    //     padding: 8px 20px;
-    // }
+        .menu {
+            position: fixed;
+            padding: 6px;
+            right: -100%;
+            top: 50px;
+            flex-direction: column;
+            background-color: $black-800;
+
+            transform: scale(0.1);
+            width: 90%;
+            border-radius: 10px;
+            margin: 10px 10px;
+
+            text-align: center;
+            transition: all 0.5s ease;
+            box-shadow: $box-shadow-high;
+
+            &.active {
+                right: 10px;
+                /* transform: scaleY(1); */
+                transform: scale(1);
+              }
+        }
+    }
 
     .navbar .menu_btn {
         display: inline-block;
