--- a/src/components/About/AboutCom.scss
+++ b/src/components/About/AboutCom.scss
@@ -4,11 +4,6 @@
 
 .about_cls {
   background-color: $bg-main;
-
-  z-index: 2;
-}
-.bg-light {
-  background-color: $bg-light;
   z-index: 2;
 }
 
@@ -16,100 +11,123 @@
 .about_box {
   flex: 0 0 50%;
   max-width: 100%;
-  padding: 20px;
+  padding: 10px;
 }
 
-.about_box {
-  /* background-color:rgb(117, 117, 135); */
+/*? ------------About_img -s --------------- */
+
+.about_img {
   z-index: 1;
-}
-
-.about_cls .card {
-  padding: 15px;
-}
-
-.about_content {
-  /* background-color: green; */
-}
-
-.about_txt {
-  font-size: 16px;
-  color: $text-low;
-}
-
-.about_content .about_txt h3 {
-  margin-bottom: 10px;
-}
-
-.about_content .about_txt p {
-  line-height: 20px;
-}
-
-.about_content .about_txt p span {
-  color: $accent-color;
-  font-weight: 900;
-}
-
-
-/* ? -------------- about titles -s ------------ */
-
-.about_content .titles {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 
-  margin: 10px 0;
-  /* margin-bottom: 15px; */
+  .img_box {
+    position: relative;
+    overflow: hidden;
+    padding: 10px;
+    position: relative;
+
+    img {
+      // width: 300px;
+      position: relative;
+      max-width: 400px;
+      height: 400px;
+      z-index: 1;
+      vertical-align: middle;
+      border: 10px solid $black-900;
+    }
+  }
 }
-
-.tab_links {
+.abt_btn_box {
+  margin-top: 10px;
+  z-index: 11;
   display: flex;
   justify-content: space-between;
-  margin-right: 50px;
-  font-size: 18px;
-  font-weight: 500;
-  cursor: pointer;
-  position: relative;
-  margin-top: 15px;
-}
 
-.tab_links::after {
-  content: "";
-  width: 0;
-  height: 3px;
-  background: $accent-color;
-  position: absolute;
-  left: 0;
-  bottom: -10px;
-  transition: 0.7s;
+  button {
+    padding: 10px 20px;
+    font-size: 0.8rem;
+  }
 }
+/*? ------------About_img -e --------------- */
+.about_box {
+  z-index: 1;
 
-.tab_links.active_link::after {
-  width: 60%;
-  border-radius: 30px;
-}
+  .about_content {
+    .about_txt {
+      font-size: 16px;
+      color: $text-low;
 
-.about_content .tab_contents {
-  flex: 60%;
-  padding-top: 10px;
-  font-size: 12px;
-  /* background-color: #03e9f4; */
-  color: $text-low;
-}
+      p {
+        line-height: 20px;
 
-.tab_contents ul li {
-  margin: 10px 0;
-}
+        span {
+          color: $accent-color;
+          font-weight: 900;
+        }
+      }
+    }
 
-.tab_contents ul li a {
-  color: $accent-color;
-  font-size: 12px;
-}
+    .title_box {
+      .titles {
+        display: flex;
+        margin-top: 12px;
+        justify-content: space-between;
+        gap: 5px;
 
-.tab_contents ul li span {
-  /* color: red; */
-  color: $white-1000;
-  font-weight: 600;
-  margin-right: 10px;
-  font-size: 15px;
+        .tab_links {
+          flex: 0 0 30%;
+          font-size: 18px;
+          font-weight: 500;
+          cursor: pointer;
+          position: relative;
+
+          &::after {
+            content: "";
+            width: 0;
+            height: 3px;
+            background: $accent-color;
+            position: absolute;
+            left: 0;
+            bottom: -10px;
+            transition: 0.7s;
+          }
+
+          &.active_link::after {
+            width: 60%;
+            border-radius: 30px;
+          }
+        }
+      }
+    }
+
+    .tab_contents {
+      flex: 60%;
+      padding-top: 10px;
+      font-size: 12px;
+      color: $text-low;
+
+      ul {
+        li {
+          margin: 10px 0;
+
+          a {
+            color: $accent-color;
+            font-size: 12px;
+          }
+          span {
+            /* color: red; */
+            color: $white-1000;
+            font-weight: 600;
+            margin-right: 10px;
+            font-size: 15px;
+          }
+        }
+      }
+    }
+  }
 }
 
 .tab_contents {
@@ -120,40 +138,32 @@
   display: flex;
 }
 
-/* ? ------------ about titles -e ----------- */
+/*!----------------######## ab1: About 
+n ends #######------------------- */
 
-/*? ------------About_img -s --------------- */
-
-.about_img {
-  /* background-color: red; */
-  z-index: 1;
-  /* background-color: red; */
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+@media (max-width: 1020px) {
+  .about_img,
+  .about_box {
+    flex: 0 0 100%;
+    max-width: 100%;
+    padding: 20px 0px;
+  }
+}
+@media (max-width: 895px) {
+  .about_cls .section_title {
+    text-align: center;
+  }
 }
 
-.about_img .img_box {
-  /* background-color: #2d64d2; */
-  /* border: 5px solid black; */
-  position: relative;
-  box-shadow: $box-shadow-high;
-  overflow: hidden;
-  padding: 10px;
-  position: relative;
+@media (max-width: 550px) {
+  .about_img {
+    .img_box {
+      padding: 10px 5px;
+      img {
+        width: 100%;
+        height: 320px;
+        z-index: 1;
+      }
+    }
+  }
 }
-
-.about_img .frame {
-  background-color: $black-900;
-}
-
-.about_img .img_box img {
-  width: 400px;
-  height: 400px;
-  z-index: 1;
-}
-
-/*? ------------About_img -e --------------- */
-
-/*!----------------######## ab1: About section ends #######------------------- */
