--- a/src/components/Contact/ContactCom.scss
+++ b/src/components/Contact/ContactCom.scss
@@ -3,6 +3,10 @@
 
 .contact_cls {
   background-color: $contact-bg;
+
+  &.section_padding {
+    padding: 20px 20px;
+  }
 }
 
 .contact_cls .contact-form .row {
@@ -31,7 +35,7 @@
 
 .contact_cls .col-cont-form {
   // background-color: rgb(75, 182, 91);
- 
+
   .contact-form {
     background-color: $black-800;
     display: block;
@@ -39,6 +43,12 @@
     overflow: hidden;
     padding: 20px;
     position: relative;
+
+    input,
+    textarea {
+      color: $white-1000;
+      padding: 10px;
+    }
   }
 }
 
@@ -56,7 +66,7 @@
     resize: vertical;
     min-height: 70px;
   }
- 
+
   .btn-bar {
     // background-color: rgb(52, 206, 35);
     .btn2 {
@@ -81,7 +91,6 @@
     padding: 5px;
   }
 }
-
 
 .contact-info {
   // background-color: rgb(52, 83, 52);
@@ -111,7 +120,7 @@
       // background-color: rgb(127, 80, 80);
       justify-content: center;
       margin-left: 5px;
-      flex:1 1;
+      flex: 1 1;
       font-size: 14px;
 
       span1 {
@@ -122,28 +131,24 @@
   }
 }
 
-
 .col-cont-form {
   flex: 0 0 auto;
   width: 50%;
 }
 .col-cont-info {
   flex: 0 0 auto;
-  width: 33.33333333%;
+  width: 40%;
 }
-
-
-
 
 // -------Res--------------
 
-@media (max-width: 700px) {
-  .col-1 {
-    flex-basis: 100%;
-  }
-}
-
 @media (max-width: 970px) {
+  .contact_cls {
+  
+    &.section_padding {
+      padding: 20px 0px;
+    }
+  }
   .col-cont-form {
     flex: 0 0 auto;
     width: 100%;
@@ -151,5 +156,11 @@
   .col-cont-info {
     flex: 0 0 auto;
     width: 100%;
+  }
+}
+
+@media (max-width: 700px) {
+  .col-1 {
+    flex-basis: 100%;
   }
 }
