--- a/src/components/Projects/ProjectCom.scss
+++ b/src/components/Projects/ProjectCom.scss
@@ -11,7 +11,7 @@
 .port_filter {
   flex: 0 0 100%;
   max-width: 100%;
-  padding: 20px;
+  padding: 20px 0px;
   text-align: center;
   margin-bottom: 10px;
   z-index: 1;
@@ -19,8 +19,7 @@
   button {
     text-transform: uppercase;
     padding: 3px 6px;
-    margin:6px;
-    // transition: all 0.3s ease;
+    margin: 10px;
   }
 
   .activeTab {
@@ -31,9 +30,9 @@
 
 /* ?------------------- filter button -e -------------------- */
 
-/*? -------------------------------- */
 .imgBox {
   position: relative;
+
   .proj-title {
     margin-bottom: 10px;
     z-index: 11;
@@ -51,8 +50,7 @@
       float: right;
       // display: inline;
 
-      button
-      {
+      button {
         padding: 1px 5px;
       }
     }
@@ -77,10 +75,7 @@
   }
 }
 
-
 .details {
-
-
   display: block;
   position: absolute;
   padding: 10px;
@@ -88,21 +83,15 @@
   margin-top: 10px;
   top: calc(100% - 13px);
 
-  // top: 95%;
   left: 0;
   width: 100%;
   height: 100%;
-  // transition: all .8s ease-in-out;
   transition: all 0.6s ease-in-out;
 
-
   p {
-    /* Styles for the text within the details section */
-    // margin: 50px;
+   
     color: $white-1000;
     font-weight: 600;
-    // transition: all 11s ease-in-out;
-
   }
 
   &.show {
@@ -110,8 +99,14 @@
   }
 }
 
-/* ?--------------------------------------- */
-
-/*? ------------ Port. animations -s --------------- */
-
 /*!----------------######## Portfolio section ends #######------------------- */
+
+@media (max-width: 430px) {
+  .port_filter {
+
+    button {
+      margin: 7px;
+    }
+   
+  }
+}
