--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -4,14 +4,14 @@
 // Background Colors
 $bg-light: #232323;
 $bg-main: #131416;
+$left-bg: #646675;
 $home-bg:#000000;
-$abt-bg:black;
 $skill-bg: #262835;
 $proj-bg:#1C1D24;
-$contact-bg:#131416;
 $navbar-bg: #1c1d2434;
 $stk-nav-bg: #1c1d24;;
 $navbar-border:#513030;
+
 
 
 //text Colors
