--- a/src/components/Home/HomeCom.scss
+++ b/src/components/Home/HomeCom.scss
@@ -41,9 +41,9 @@
 
 
 .hb-typo {
-    padding: 10px;
+    // padding: 100px;
     // background-color: green;
-    margin-bottom: 10px;
+    // margin-bottom: 10px;
 
     h6 {
         font-size: 1.2rem;
@@ -74,7 +74,7 @@
 
 .quote_box {
     position: absolute;
-    bottom: 18px;
+    bottom: calc(100% - 97vh);
     right: 10px;
     padding: 10px;
 
