--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,3 @@
-
 @import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
 @import "variables";
 
@@ -11,30 +10,45 @@ html {
   /* scroll-snap-type: y mandatory; */
   text-rendering: optimizeLegibility;
 }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  outline: none;
+}
 
 body {
-  /* for dark theme */
-  /* background: linear-gradient(
-        144.39deg, 
-        #ffffff -278.56%,
-        #6d6d6d -78.47%,
-        #11101d 91.61%
-      ); */
-  background-color: #202020;
 
   font-size: 13px;
   font-weight: 400;
   color: $white-1000;
   overflow-x: hidden;
   font-family: "Nunito", serif;
+
+  background:$bg-main;
+  z-index: 1;
+  position: relative;
 }
 
-* {
-  margin:0;
-  padding:0;
-  box-sizing: border-box;
-  text-decoration: none;
-  outline: none;
+.after_bg_col:after
+{
+  background: $left-bg;
+  bottom: 0;
+  content: "";
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 40%;
+  z-index: -1;
+}
+
+@media (max-width: 960px) {
+ 
+  .after_bg_col:after
+  {
+     display: none;
+  }
 }
 
 /*? -------------------Body -e----------------------- */
@@ -48,8 +62,7 @@ ul {
   list-style: none;
 }
 
-section
-{
+section {
   display: block;
 }
 .section_padding {
@@ -106,17 +119,14 @@ button {
   a {
     color: $bg-light;
   }
-
 }
 
-button:hover
-{
+button:hover {
   box-shadow: $box-shadow-high;
   background-color: $bg-light;
   color: $accent-color;
 }
-button:hover a
-{
+button:hover a {
   color: $accent-color;
 }
 
@@ -187,8 +197,7 @@ button:hover a
   line-height: 54px;
   letter-spacing: 3px;
 
-  text-shadow: 0px 0px 4px rgba(202, 228, 225, 0.492),
-    0 0 4px rgba(202, 228, 225, 0.209);
+  text-shadow: 0px 0px 4px rgba(202, 228, 225, 0.492), 0 0 4px rgba(202, 228, 225, 0.209);
 }
 
 .sub_title {
@@ -214,11 +223,11 @@ button:hover a
 }
 
 ::-webkit-scrollbar-track {
-  background: rgba(0, 212, 255, 1);
+  background: rgba(0, 0, 0, 0.445);
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgb(26, 17, 1);
+  background-color: $accent-color;
   border-radius: 0.6rem;
   border: 0.2rem solid transparent;
   background-clip: content-box;
@@ -349,15 +358,15 @@ button:hover a
 
 @keyframes glowing {
   0% {
-    box-shadow: 0 0 18px #03e9f4, 0 0 18px #03e9f4, 0 0 18px #03e9f4;
+    box-shadow: 0 0 8px #f4c003, 0 0 8px #dab10e, 0 0 8px #f4e003;
   }
 
   50% {
-    box-shadow: 0 0 18px #54c4ca, 0 0 18px #09747a, 0 0 18px #07383a;
+    box-shadow: 0 0 8px #b8ca54, 0 0 8px #747a09, 0 0 8px #363a07;
   }
 
   100% {
-    box-shadow: 0 0 18px #03e9f4, 0 0 18px #03e9f4, 0 0 18px #03e9f4;
+    box-shadow: 0 0 8px #f4c003, 0 0 8px #dab10e, 0 0 8px #f4e003;
   }
 }
 
@@ -423,17 +432,8 @@ button:hover a
 
 /*TODO  re1160  */
 @media (max-width: 1160px) {
-
-
 }
 
 //?  re85  */
 @media (max-width: 895px) {
-
 }
-
-
-
-
-
-
