--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -16,6 +16,7 @@ $navbar-border:#513030;
 
 //text Colors
 $accent-color:#d88135;
+$accent800:#ff7802;
 $text-low: rgba(255, 255, 255, 0.721);
 $main1: #404bc7;
 $grad-main:linear-gradient(to left, orange, tomato);
