--- a/src/components/Social-icon/SocialCom.scss
+++ b/src/components/Social-icon/SocialCom.scss
@@ -67,11 +67,11 @@
         padding: 4px;
         margin: 3px;
         border-radius: 100%;
-        transition: all 0.3s ease-in-out;
+        transition: all 0.2s ease-in-out;
 
         &:hover {
             transform: scale(1.2);
-            border-radius: 100%;
+            // border-radius: 100%;
         }
 
         &:nth-child(1):hover {
