--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -16,7 +16,8 @@ $navbar-border:#513030;
 
 //text Colors
 $accent-color:#d88135;
-$accent800:#ff7802;
+$accent1000:#ff7802;
+$accent400:rgba(220, 150, 90, 0.1);
 $text-low: rgba(255, 255, 255, 0.721);
 $main1: #404bc7;
 $grad-main:linear-gradient(to left, orange, tomato);
