--- a/src/components/About/AboutCom.scss
+++ b/src/components/About/AboutCom.scss
@@ -39,6 +39,7 @@
       z-index: 1;
       vertical-align: middle;
       border: 10px solid $black-900;
+
     }
   }
 }
@@ -82,6 +83,9 @@
 
         .tab_links {
           flex: 0 0 30%;
+          // background-color: red;
+         
+      
           font-size: 18px;
           font-weight: 800;
           cursor: pointer;
