--- a/src/components/Social-icon/SocialCom.scss
+++ b/src/components/Social-icon/SocialCom.scss
@@ -12,12 +12,9 @@
 
     &.show {
         right: 10px;
-
-        .social-toggle::before {
-            content: "\f054"; /* Change the content to the new arrow icon */
-            font-weight: 900;
-            font-size: 1.6rem;
-        }
+    }
+    &:hover {
+        // right: 10px;
     }
 
     .social-toggle {
@@ -34,17 +31,34 @@
         align-items: center;
 
         background-color: rgba(255, 255, 255, 0);
-        border: 2.5px solid $accent-color;
-        border-radius: 50%;
+        border: 1.5px solid $accent-color;
+
+        border-radius: 40%;
+        border-bottom-right-radius: 0;
         color: $accent-color;
         cursor: pointer;
         animation: glowing 1.5s infinite;
 
-        &::before {
-            content: "\f086";
-            font-family: "fontAwesome";
-            font-weight: 900;
-            font-size: 1.3rem;
+        transition: all 0.3s ease-in-out;
+
+        img {
+            width: 30px;
+            height: 30px;
+            padding: 2px;
+
+            transition: all 0.5s ease-in-out;
+        }
+
+        &:hover {
+            //  transform: scale(1.1);
+            width: 45px;
+            height: 45px;
+            // animation: none;
+
+            img {
+                width: 35px;
+                height: 35px;
+            }
         }
     }
 
