--- a/src/components/Home/HomeCom.scss
+++ b/src/components/Home/HomeCom.scss
@@ -4,7 +4,7 @@
     // max-height: 100vh;
     // background-image: url("../../assets/Background-imgs/bg3-bw.jpg");
 
-    background-color: grey;
+    // background-color: grey;
 }
 
 .home-banner {
@@ -12,8 +12,6 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-
-   
 
     width: 100%;
     height: 100vh;
@@ -39,35 +37,47 @@
 //     z-index: 5;
 // }
 
-
 .hb-typo {
     // padding: 100px;
     // background-color: green;
     // margin-bottom: 10px;
 
     h6 {
-        font-size: 1.2rem;
+        font-size: 1.4rem;
     }
     h1 {
-        font-size: 4rem;
+        // font-size: 5rem;
+        // font-weight: 900;
+        // color: transparent;
+        // background-image: $grad-main;
+        // background-clip: text;
+        // -webkit-background-clip: text;
+
+        color: #fff;
+        font-size: 80px;
         font-weight: 900;
-        color: transparent;
-        background-image: $grad-main;
-        background-clip: text;
-        -webkit-background-clip: text;
-
+        letter-spacing: 5px;
+       text-transform: uppercase;
         // margin-bottom: 15px;
-
-        // span
-        // {
-        //     color: $accent-color;
-        //     font-weight: 100;
-        // }
     }
     h3 {
         font-size: 2.3rem;
         font-weight: 500;
+
         .prof {
+            // opacity: 0;
+            background: hsla(0, 0%, 100%, 0.1);
+            border-radius: 30px;
+            color: #fff;
+            display: inline-flex;
+            font-size: 1.2rem;
+            font-weight: 600;
+            letter-spacing: 1px;
+            margin: 0 3px 8px;
+            padding: 7px 20px;
+            // text-transform: uppercase;
+            transition: opacity 0.3s ease-in-out;
+            animation: fadeIn 1.5s infinite;
         }
     }
 }
