--- a/src/components/Skills/SkillCom.scss
+++ b/src/components/Skills/SkillCom.scss
@@ -7,8 +7,6 @@
 }
 
 .card {
-  
-
   .heading {
     z-index: 2;
     display: flex;
@@ -33,8 +31,7 @@
       left: 0;
       width: 50px;
       border-radius: 10px;
-      transition: all .7s cubic-bezier(0.06, 0.21, 0.93, 0.04);
-
+      transition: all 0.7s cubic-bezier(0.06, 0.21, 0.93, 0.04);
     }
   }
 
@@ -69,11 +66,24 @@
       transition: all 0.5s ease-in-out;
       transform-style: preserve-3d; /* Apply 3D transformation to child elements */
 
-      img,svg{
-        width: 50px;
-        height: 50px;
-        transform: translateZ(75px); /* Move the image towards the viewer */
-        transition: transform 0.5s ease-in-out;
+      img,
+      svg {
+        // width: 50px;
+        // height: 50px;
+        // transform: translateZ(75px); /* Move the image towards the viewer */
+        transition: transform 2.5s ease-in-out;
+        // max-width: 100%;
+        display: block;
+        width: 70px;
+        height: 70px;
+        // padding: 5px;
+        object-fit: fill;
+        margin-inline: auto;
+        margin-bottom: 15px;
+        outline: 5px solid white;
+        box-shadow: 4px 4px 10px 4px lightgrey;
+        border-radius: 50%;
+        vertical-align: middle;
       }
 
       h5 {
@@ -85,12 +95,14 @@
       }
 
       &:hover {
-        transform: rotateX(-10deg) rotateY(20deg); /* Apply 3D rotation on hover */
-        
-      }
-
-      &:hover img {
-        transform: translateZ(0); /* Reset the image translation on hover */
+        img {
+          transform: rotate(360deg);
+          box-shadow: $box-shadow-high;
+        }
+        h5
+        {
+          color: $accent-color;
+        }
       }
     }
   }
@@ -107,8 +119,6 @@
     h3::after {
       background: $white-1000;
     }
-
-    
   }
   p,
   h4 {
@@ -119,13 +129,11 @@
     background-color: $white-1000;
   }
   .skill-icon {
-    transform: scale(1.1);
+    // transform: scale(1.1);
 
     h5 {
       color: $black-400;
       transform: scale(1.1);
     }
   }
-
-
 }
