--- a/src/index.scss
+++ b/src/index.scss
@@ -306,10 +306,13 @@ button:hover a {
 @keyframes fadeIn {
   from {
     opacity: 0;
+    transform: scale(1.1);
   }
 
   to {
     opacity: 1;
+    transform: scale(0.9);
+
   }
 }
 
