retriving contact form data in g sheet

--- a/src/components/Home/HomeCom.scss
+++ b/src/components/Home/HomeCom.scss
@@ -4,7 +4,7 @@
     // max-height: 100vh;
     // background-image: url("../../assets/Background-imgs/bg3-bw.jpg");
 
-    // background-color: grey;
+    background-color: black;
 }
 
 .home-banner {
@@ -39,8 +39,9 @@
 
 .hb-typo {
     // padding: 100px;
-    // background-color: green;
+    background-color: green;
     // margin-bottom: 10px;
+    
 
     h6 {
         font-size: 1.4rem;
