--- a/src/components/Projects/ProjectCom.scss
+++ b/src/components/Projects/ProjectCom.scss
@@ -24,9 +24,8 @@
   }
 
   .activeTab {
-    background: #03e9f4;
-    // box-sizing: border-box;
-    outline: 2px solid $white-1000;
+    background: $white-1000;
+    box-shadow: $box-shadow-low;
   }
 }
 
@@ -63,7 +62,7 @@
   img {
     display: block;
     width: 100%;
-    height: 230px;
+    height: 250px;
     margin-bottom: 10px;
     z-index: 1;
   }
