--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -3,7 +3,7 @@
 
 // Background Colors
 $bg-light: #232323;
-$bg-main: #131416;
+$bg-main: #2B2E37;
 $left-bg: #646675;
 $home-bg:#000000;
 $skill-bg: #262835;
@@ -15,7 +15,7 @@ $navbar-border:#513030;
 
 
 //text Colors
-$accent-color:#d88135;
+$accent-color:#3F91F9;
 $accent1000:#ff7802;
 $accent400:rgba(220, 150, 90, 0.1);
 $text-low: rgba(255, 255, 255, 0.721);
