--- a/src/components/Home/HomeCom.scss
+++ b/src/components/Home/HomeCom.scss
@@ -4,7 +4,7 @@
     // max-height: 100vh;
     // background-image: url("../../assets/Background-imgs/bg3-bw.jpg");
 
-    background-color: black;
+    // background-color: black;
 }
 
 .home-banner {
