--- a/src/components/Projects/ProjectCom.scss
+++ b/src/components/Projects/ProjectCom.scss
@@ -3,7 +3,7 @@
 /*!----------------######## Portfolio section ends #######------------------- */
 
 .port_cls {
-  background-color: $proj-bg;
+  // background-color: $proj-bg;
 }
 
 /* ?------------------- filter button  -e -------------------- */
